Horizontal scrolling fixed, Services Dropdown - KPI added

--- a/evbex/static/css/style.css
+++ b/evbex/static/css/style.css
@@ -7,7 +7,7 @@
 body{
     margin: 0;
     background: #D8D8D8;
-/*     overflow-x: hidden; */
+    overflow-x: hidden;
     font-family: 'Montserrat';
     min-height: 100vh;
 }
